# xenon

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  disasm.js  flake.nix  output.txt  pixel_shader_3D0F8ECE.bin.spv  vertex_shader_490721B7.bin.spv  xenon-tools.nix  xenon.nix
.github/: codeql-actions.yml  codeql-cpp.yml
.github/codeql/custom-queries/cpp/: msvcSpecific.ql  qlpack.yml
.github/workflows/: build.yml  codeql.yml
Tools/: CMakeLists.txt  CMakeSettings.json  README.md  byteswap.cpp  get_idx.cpp  get_opcode.cpp  vpu_tests.cpp  xenos_disasm.cpp  xenos_disasm_mappings.h  xenos_disasm_spirv.h
Tools/AST/: CMakeLists.txt  CMakePresets.json  ShaderConstants.h  XenosRegisters.h  main.cpp
Tools/AST/Base/: Hash.h  Param.h  Types.h
Tools/AST/Base/Logging/: Log.h
Tools/AST/Microcode/: ASTBlock.cpp  ASTBlock.h  ASTEmitter.cpp  ASTEmitter.h  ASTNode.cpp  ASTNode.h  ASTNodeBase.h  ASTNodeWriter.h  ASTStatement.cpp  ASTStatement.h  Transformer.cpp  Transformer.h
Tools/WinDBG_Test/: CMakeLists.txt  KDProtocol.cpp  KDProtocol.h  Main.cpp  Serial.cpp  Serial.h  Types.h
Xenon/: Main.cpp  Xenon.rc
Xenon/Base/: Alignment.h  Arch.h  Assert.cpp  Assert.h  Bitfield.h  BoundedQueue.h  Bounded_threadsafe_queue.h  CRCHash.h  CommitCount.cpp.in  CommitCount.h  Concepts.h  Config.cpp  Config.h  Enum.h  Error.cpp  Error.h  Exit.h  Futex.h  Global.h  Hangup.cpp  Hangup.h  Hash.h  IoFile.cpp  IoFile.h  LRUCache.h  Param.h  PathUtil.cpp  PathUtil.h  Path_util.cpp  Path_util.h  PolyfillThread.h  Polyfill_thread.h  StringUtil.cpp  StringUtil.h  String_util.cpp  String_util.h  SystemDevice.h  Thread.cpp  Thread.h  Types.h  (+6 more)
Xenon/Base/Logging/: Backend.cpp  Backend.h  Filter.cpp  Filter.h  Formatter.h  Log.h  LogEntry.h  LogTypes.h  Log_entry.h  Log_types.h  TextFormatter.cpp  TextFormatter.h  Text_formatter.cpp  Text_formatter.h  Types.h
Xenon/Core/: XeMain.cpp  XeMain.h  Xe_Main.cpp  Xe_Main.h
Xenon/Core/NAND/: NAND.cpp  NAND.h
Xenon/Core/PCI/: PCIDevice.h  PCIe.h  SATA.h
Xenon/Core/PCI/Bridge/: HostBridge.cpp  HostBridge.h  PCIBridge.cpp  PCIBridge.h  PCIBridgeConfig.h
Xenon/Core/PCI/Devices/HDD/: HDD.h  (+1 more)
Xenon/Core/RAM/: RAM.cpp  RAM.h
Xenon/Core/RootBus/: RootBus.cpp  RootBus.h
Xenon/Core/RootBus/HostBridge/: HostBridge.cpp  HostBridge.h  PCIe.h
Xenon/Core/XCPU/: Bitfield.h  ElfABI.h  UART.cpp  UART.h  Xenon.cpp  Xenon.h  XenonCPU.cpp  XenonCPU.h  XenonContext.h  XenonReservations.cpp  XenonReservations.h  XenonSOC.cpp  XenonSOC.h  eFuse.h  elf_abi.h
Xenon/Core/XCPU/Context/: XenonContext.cpp  XenonContext.h  XenonSOC.h
Xenon/Core/XCPU/IIC/: IIC.cpp  IIC.h
Xenon/Core/XCPU/Interpreter/: InstructionProfiler.cpp  InstructionProfiler.h  Interpreter_Helpers.cpp  PPCInternal.h  PPCInterpreter.cpp  PPCInterpreter.h  PPCOpcodes.h  PPC_ALU.cpp  PPC_BC.cpp  PPC_FPU.cpp  PPC_Instruction.cpp  PPC_Instruction.h  PPC_LS.cpp  PPC_MMU.cpp  PPC_System.cpp  PPC_VXU.cpp  Testing.cpp
Xenon/Core/XCPU/JIT/: PPU_JIT.cpp  PPU_JIT.h  TranslationExample.h
Xenon/Core/XCPU/MMU/: XenonMMU.cpp  XenonMMU.h
Xenon/Core/XCPU/PPU/: PPCInternal.h  PPCOpcodes.h  PPU.cpp  PPU.h  PPU_JIT.cpp  PPU_JIT.h  PowerPC.h  Testing.cpp
Xenon/Core/XCPU/PostBus/: PostBus.cpp  PostBus.h
Xenon/Core/XCPU/UART/: UART.cpp  UART.h
Xenon/Core/XCPU/XenonMMU/: XenonMMU.cpp  XenonMMU.h
Xenon/Core/XGPU/: CommandProcessor.cpp  CommandProcessor.h  EDRAM.cpp  EDRAM.h  PM4Opcodes.h  RingBuffer.cpp  RingBuffer.h  ShaderConstants.h  XGPU.cpp  XGPU.h  XGPUConfig.h  Xenos.h  XenosRegisters.h  XenosState.cpp  XenosState.h  build.h  dx11AbstractLayer.cpp  dx11AbstractLayer.h  dx11FetchLayout.cpp  dx11FetchLayout.h  dx11GeometryBuffer.cpp  dx11GeometryBuffer.h  dx11GeometryDrawer.cpp  dx11GeometryDrawer.h  dx11MicrocodeBlocks.cpp  dx11MicrocodeBlocks.h  dx11MicrocodeBlocksTranslator.cpp  dx11MicrocodeBlocksTranslator.h  dx11MicrocodeCache.cpp  dx11MicrocodeCache.h  dx11MicrocodeConstants.h  dx11MicrocodeDecompiler.cpp  dx11MicrocodeDecompiler.h  dx11MicrocodeHLSLWriter.h  dx11MicrocodeNodes.cpp  dx11MicrocodeNodes.h  dx11MicrocodeShader.cpp  dx11MicrocodeShader.h  dx11RenderingWindow.cpp  dx11RenderingWindow.h  (+49 more)
Xenon/Core/XGPU/Microcode/: ASTBlock.cpp  ASTBlock.h  ASTEmitter.cpp  ASTEmitter.h  ASTNode.cpp  ASTNode.h  ASTNodeBase.h  ASTNodeWriter.cpp  ASTNodeWriter.h  ASTNodeWriterBase.h  ASTStatement.cpp  ASTStatement.h  Constants.h  Transformer.cpp  Transformer.h
Xenon/Render/: DummyRenderer.cpp  DummyRenderer.h  OGLRenderer.cpp  OGLRenderer.h  RenderDoc.cpp  RenderDoc.h  Renderer.cpp  Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h
Xenon/Render/Abstractions/: Buffer.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  VertexInput.h
Xenon/Render/Abstractions/Factory/: ResourceFactory.h  ShaderFactory.h
Xenon/Render/Backends/Dummy/: DummyRenderer.cpp  DummyRenderer.h
Xenon/Render/Backends/OGL/: OGLRenderer.cpp  OGLRenderer.h  OGLShaders.h
Xenon/Render/Backends/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaders.h
Xenon/Render/Dummy/: DummyBuffer.cpp  DummyBuffer.h  DummyShader.cpp  DummyShader.h  DummyTexture.cpp  DummyTexture.h  DummyVertexInput.cpp  DummyVertexInput.h
Xenon/Render/Dummy/Factory/: DummyResourceFactory.h  DummyShaderFactory.cpp  DummyShaderFactory.h
Xenon/Render/GUI/: Dummy.cpp  Dummy.h  GUI.cpp  GUI.h  OpenGL.cpp  OpenGL.h  Roboto-Regular.h  Vulkan.cpp  Vulkan.h
Xenon/Render/GUI/Implementations/: OpenGL.cpp  OpenGL.h
Xenon/Render/Implementations/: OGLTexture.cpp  OGLTexture.h
Xenon/Render/OpenGL/: OGLBuffer.cpp  OGLBuffer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLVertexInput.cpp  OGLVertexInput.h
Xenon/Render/OpenGL/Factory/: OGLResourceFactory.h  OGLShaderFactory.cpp  OGLShaderFactory.h
Xenon/Render/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexInput.cpp  VulkanVertexInput.h
Xenon/include/: microprofile.config.h
enc_temp_folder/90e6ea862329c28cad0249fc2343296/: XGPU.h
enc_temp_folder/b8fa158525462ef24cda6615fddadd3/: XenosState.cpp
(+120 files in other folders)
